# e303-sms

./: CMakeLists.txt  README  README.md
debian/: README  changelog  control  copyright
src/: callback.c  chunks.h  create_request.c  main.c  xml_node_content.c
